
option java_outer_classname="LoggingInfoModifiedEventResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message LoggingInfoModifiedEventResponse 
{
	optional bool enableErrorsLog = 1;
	optional bool enableDetailedErrorsLog = 2;
}